--- a/style/style.css
+++ b/style/style.css
@@ -8,8 +8,8 @@ img {
 }
 
 #logo {
-	max-height: 20%;
-	max-width: 20%;
+	height: 200%;
+	width: 200%;
 }
 
 .spacer {
@@ -20,11 +20,21 @@ img {
 	background: red;
 }
 
-li,ul,ol{
+ul,ol{
 	list-style: none;
+	width: 100%;
+	margin: auto;
 }
 
 .linkImg {
 	border-color: rgb(36, 36, 33);
 	border-width: 2px;
+}
+
+.cardBlockShadow {
+	box-shadow: 0 0 5px gray;
+}
+
+.cardBlockShadow:hover {
+	box-shadow: 0 0 5px red;
 }
